--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,6 +13,16 @@ data_validation:
   STATUS_FILE: artifacts/data_validation/status.txt
   ALL_REQUIRED_FOLDERS: ["artifacts/data_ingestion/UrbanSound8K/audio","artifacts/data_ingestion/UrbanSound8K/metadata"]
 
+
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  audio_data_path: artifacts/data_ingestion/UrbanSound8K/audio
+  meta_data_path: artifacts/data_ingestion/UrbanSound8K/metadata/UrbanSound8K.csv
+
+
+
+
 # prepare_base_model:
 #   root_dir: artifacts/prepare_base_model
 #   base_model_path: artifacts/prepare_base_model/base_model.h5
