--- a/config/config.yaml
+++ b/config/config.yaml
@@ -21,13 +21,10 @@ data_transformation:
   meta_data_path: artifacts/data_ingestion/UrbanSound8K/metadata/UrbanSound8K.csv
 
 
-
-
-# prepare_base_model:
-#   root_dir: artifacts/prepare_base_model
-#   base_model_path: artifacts/prepare_base_model/base_model.h5
-#   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
-
+model_trainer:
+  root_dir: artifacts/model_trainer
+  preprocessed_data_path : artifacts/data_transformation/preprocessed_data.json
+  trained_model_path: artifacts/model_trainer
 
 
 
